# template_cmake_lib

./: CMakeLists.txt  README.md  install
include/tpl_project_tpl/: Element.h  Util.h
src/: Element.cpp  Util.cpp
tests/: ElementTest.cpp  UtilTest.cpp
